# python_dist_guide

./: README.md  README.org  readme.wheel.org
hello/: README.md  pyproject.toml
hello/src/hello/: __init__.py  cli.py
hello/src/hello/handlers/: __init__.py  bay_handler.py  default_handler.py  hi_handler.py
hello/tests/: test_hello.py
hellolib/: README.md  __init__.py  pyproject.toml  use_hellolib_example.py
hellolib/src/hellolib/: hello.py
hellolib/tests/: init.py  test_hellolib.py
