[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hello"
version = "0.1.0"
description = "A CLI greeting application"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
]

[project.scripts]
hello = "hello.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["hello", "hello.handlers"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
